# ollvm

./: .build.yml  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
include/: ObfuscationOptions.h  ObfuscationPassManager.h  Utils.h
ollvm-pass/: CMakeLists.txt  CMakeSettings.json
ollvm-pass/obfuscation/: CMakeLists.txt  ConstantFPEncryption.cpp  ConstantIntEncryption.cpp  Flattening.cpp  IndirectBranch.cpp  IndirectCall.cpp  IndirectGlobalVariable.cpp  ObfuscationOptions.cpp  ObfuscationPassManager.cpp  StringEncryption.cpp  Utils.cpp
ollvm-pass/obfuscation/include/: ObfuscationPassManager.h
src/: ConstantFPEncryption.cpp  ConstantIntEncryption.cpp  CryptoUtils.cpp  Flattening.cpp  IndirectBranch.cpp  IndirectCall.cpp  IndirectGlobalVariable.cpp  LegacyLowerSwitch.cpp  ObfuscationOptions.cpp  ObfuscationPassManager.cpp  StringEncryption.cpp  Utils.cpp  obfuscation.def
